--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
 
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <head>
+      <meta charset="UTF-8">
+      <title>Isaac's Portfolio</title>
  </head>
-
  <body>
-    <h1>Isaac's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
-    <hr/>
-    <a href="../2.4 Movie Ranking Project/index.html"><h3>Movie Ranking Project</h3></a>
-    <img src="./assets/images/movie-ranking.png" 
-    alt="Isaac's Movie Ranking Project" height="200"/>
+   <h1>Isaac's Portfolio</h1>
+   <h2>I'm a Web Developer</h2>
+   <hr/>
+   <h3><a href="./public/Movie.html">Movie Ranking Project</a></h3>
+   <img src="./assets/images/movie-ranking.png" alt="Isaac's Movie Ranking Project" height="200"/>
+   <h3><a href="./public/Birthday.html"><h3>Birthday Invite Project</h3></a></h3>
+   <img src="./assets/images/birthday-invite.png" alt="Isaac's Birthday Invite Project" height="200"/>
+   <hr/>
+   <a href="./public/about.html">About Me</a> 
+   <a href="./public/contact.html">Contact Me</a>
+</body>
 
-    <a href="../3.4 Birthday Invite Project/index.html"><h3>Birthday Invite Project</h3></a>
-    <img src="./assets/images/birthday-invite.png" 
-    alt="Isaac's Birthday Invite Project" height="200"/>
-    <hr/>
-    <a href="./public/about.html">About Me</a> 
-    <a href="./public/contact.html">Contact Me</a>
-       
-   
- </body>
- </html>
+</html>
 
 
 
